# tech_news_app-

./: .env.example  .gitignore  README.md  codex_tech_news_app.md  pyproject.toml
.github/workflows/: tech_news_app.yml
data/: news.sqlite
src/tech_news_app/: __init__.py  config.py  fetchers.py  main.py  models.py  parser.py  renderer.py  storage.py  summarizer.py
tests/: test_importance.py  test_parser.py  test_renderer.py  test_storage.py  test_summarizer.py
