[project]
name = "tech-news-app"
version = "0.1.0"
description = "Official-source technology news digest for GitHub Pages"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "feedparser>=6.0.11",
    "jinja2>=3.1.4",
    "pydantic>=2.10.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
tech-news = "tech_news_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tech_news_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
